# qstartrs

./: .gitconfig  .gitignore  Cargo.toml  README.md  shell.nix
.devcontainer/: Dockerfile  devcontainer.json
src/: main.rs
