[package]
name = "qstartrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = { version = "0.19", features = ["termion"] }
termion = "2.0.3"
git2 = "0.18.1"
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }